force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/fields/smagicinteract__Profile__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Profile__c</fullName>
    <description>stores profile name to which sender id is related.</description>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>