force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/fields/smagicinteract__Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Profile_Id__c</fullName>
    <description>This field contains the profile ID related to the sender ID of the user.</description>
    <label>Profile Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>