force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/fields/smagicinteract__Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sender_Id__c</fullName>
    <description>Deprecated from version 1.31. Use smagicinteract__Default_SenderId__c field instead.</description>
    <label>Sender Id (Deprecated)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>