force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/fields/smagicinteract__User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>stores information of user related with sender id.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SenderId_Profile_Map</relationshipName>
    <type>Lookup</type>
</CustomField>