force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/listViews/smagicinteract__Default_Sender_Id_List.listView-meta.xml
<ListView>
    <fullName>smagicinteract__Default_Sender_Id_List</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Profile__c</columns>
    <columns>smagicinteract__Sender_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Default Sender Id List</label>
</ListView>